<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ui.fragment.DetailsFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sm"
                android:lines="2"
                android:maxLines="2"
                android:minLines="2"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="TextView" />

            <ImageView
                android:id="@+id/image_view_poster"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginStart="@dimen/margin_sm"
                android:layout_marginTop="@dimen/margin_xs"
                android:layout_marginEnd="@dimen/margin_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_title" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ano"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_year" />

            <TextView
                android:id="@+id/text_view_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_sm"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView1"
                app:layout_constraintTop_toBottomOf="@id/image_view_poster"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lan_amento"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_released" />

            <TextView
                android:id="@+id/text_view_released"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@id/text_view_year"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dura_o"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_runtime" />

            <TextView
                android:id="@+id/text_view_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/text_view_released"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_nero"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_genre" />

            <TextView
                android:id="@+id/text_view_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView4"
                app:layout_constraintTop_toBottomOf="@id/text_view_runtime"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diretor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_director" />

            <TextView
                android:id="@+id/text_view_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView5"
                app:layout_constraintTop_toBottomOf="@id/text_view_genre"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escritor"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_writer" />

            <TextView
                android:id="@+id/text_view_writer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView6"
                app:layout_constraintTop_toBottomOf="@id/text_view_director"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elenco"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_actors" />

            <TextView
                android:id="@+id/text_view_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView7"
                app:layout_constraintTop_toBottomOf="@id/text_view_writer"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_plot" />

            <TextView
                android:id="@+id/text_view_plot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView8"
                app:layout_constraintTop_toBottomOf="@id/text_view_actors"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_ngua"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_language" />

            <TextView
                android:id="@+id/text_view_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@+id/image_view_poster"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/text_view_plot"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pa_s"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_country" />

            <TextView
                android:id="@+id/text_view_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView10"
                app:layout_constraintTop_toBottomOf="@id/text_view_language"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_imdb"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_view_poster"
                app:layout_constraintTop_toTopOf="@id/text_view_imdb" />

            <TextView
                android:id="@+id/text_view_imdb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xs"
                android:layout_marginTop="@dimen/margin_xs"
                android:layout_marginBottom="@dimen/margin_sm"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/image_view_poster"
                app:layout_constraintStart_toEndOf="@id/textView11"
                app:layout_constraintTop_toBottomOf="@id/text_view_country"
                tools:text="TextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/layout_error"
        layout="@layout/layout_no_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/layout_progress"
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>